--- a/products/p2.html
+++ b/products/p2.html
@@ -3,6 +3,14 @@
 <head>
 <meta charset="utf-8">
 
+<script type="text/javascript">
+    (function(c,l,a,r,i,t,y){
+        c[a]=c[a]||function(){(c[a].q=c[a].q||[]).push(arguments)};
+        t=l.createElement(r);t.async=1;t.src="https://www.clarity.ms/tag/"+i;
+        y=l.getElementsByTagName(r)[0];y.parentNode.insertBefore(t,y);
+    })(window, document, "clarity", "script", "g176ys9u28");
+</script>
+
 <!-- Hotjar Tracking Code for my site -->
 <script>
     (function(h,o,t,j,a,r){
