change chat widget to tawkto

--- a/home.html
+++ b/home.html
@@ -2,48 +2,25 @@
 <html lang="sk" itemscope itemtype="http://schema.org/WebPage">
 <head>
 <meta charset="utf-8">
-
-<script type="text/javascript">
-    (function(c,l,a,r,i,t,y){
-        c[a]=c[a]||function(){(c[a].q=c[a].q||[]).push(arguments)};
-        t=l.createElement(r);t.async=1;t.src="https://www.clarity.ms/tag/"+i;
-        y=l.getElementsByTagName(r)[0];y.parentNode.insertBefore(t,y);
-    })(window, document, "clarity", "script", "g176ys9u28");
-</script>
-
-<!-- Hotjar Tracking Code for my site -->
-<script>
-    (function(h,o,t,j,a,r){
-        h.hj=h.hj||function(){(h.hj.q=h.hj.q||[]).push(arguments)};
-        h._hjSettings={hjid:3386025,hjsv:6};
-        a=o.getElementsByTagName('head')[0];
-        r=o.createElement('script');r.async=1;
-        r.src=t+h._hjSettings.hjid+j+h._hjSettings.hjsv;
-        a.appendChild(r);
-    })(window,document,'https://static.hotjar.com/c/hotjar-','.js?sv=');
-</script>
-
-<!-- Sendinblue Conversations {literal} -->
-<script>
-    (function(d, w, c) {
-        w.SibConversationsID = '63fa6de8871959363a4fa500';
-        w[c] = w[c] || function() {
-            (w[c].q = w[c].q || []).push(arguments);
-        };
-        var s = d.createElement('script');
-        s.async = true;
-        s.src = 'https://conversations-widget.sendinblue.com/sib-conversations.js';
-        if (d.head) d.head.appendChild(s);
-    })(document, window, 'SibConversations');
-</script>
-<!-- /Sendinblue Conversations {/literal} -->
-
-
 </head>
 <body>
 <h1>Produkty</h1>
 <a href="products/p1.html">Produkt 1</a>
 <a href="products/p2.html">Produkt 2</a>
 <a href="products/p3.html">Produkt 3</a>
+
+<!--Start of Tawk.to Script-->
+<script type="text/javascript">
+var Tawk_API=Tawk_API||{}, Tawk_LoadStart=new Date();
+(function(){
+var s1=document.createElement("script"),s0=document.getElementsByTagName("script")[0];
+s1.async=true;
+s1.src='https://embed.tawk.to/640346834247f20fefe3f365/1gqmcmssr';
+s1.charset='UTF-8';
+s1.setAttribute('crossorigin','*');
+s0.parentNode.insertBefore(s1,s0);
+})();
+</script>
+<!--End of Tawk.to Script-->
 </body>
 </html>
