--- a/products/p3.html
+++ b/products/p3.html
@@ -23,7 +23,7 @@ s1.setAttribute('crossorigin','*');
 s0.parentNode.insertBefore(s1,s0);
 })();
 
-var page = " home ";
+var page = " products/p3 ";
 window.Tawk_API.onLoad = function(){
         console.log(Date.now() + page + "load");
 };
@@ -53,13 +53,13 @@ window.Tawk_API.onChatMessageAgent = function(message){
 
     switch (message) {
        case "qqq":
-           window.location.href = "products/p1.html";
+           window.location.href = "p1.html";
            break;
        case "www":
-           window.location.href = "products/p2.html";
+           window.location.href = "p2.html";
            break;
        case "eee":
-           window.location.href = "products/p3.html";
+           window.location.href = "p3.html";
            break;
     }
 };
