--- a/home.html
+++ b/home.html
@@ -2,12 +2,27 @@
 <html lang="sk" itemscope itemtype="http://schema.org/WebPage">
 <head>
 <meta charset="utf-8">
+
+    <script type="application/javascript">
+	document.addEventListener("click", customLogger);
+
+	function customLogger(event) {
+      const namedParentElement = event.target.closest('[data-label]');
+      if (namedParentElement != null){
+          console.log('click ' + namedParentElement.getAttribute('data-label'));
+        }
+      else {
+          console.log("redundant click");
+      }
+	}
+</script>
+
 </head>
 <body>
 <h1>Produkty</h1>
-<a href="products/p1.html">Produkt 1</a>
-<a href="products/p2.html">Produkt 2</a>
-<a href="products/p3.html">Produkt 3</a>
+<a href="products/p1.html" data-label="produkt-1">Produkt 1</a>
+<a href="products/p2.html" data-label="produkt-2">Produkt 2</a>
+<a href="products/p3.html" data-label="produkt-3">Produkt 3</a>
 
 <!--Start of Tawk.to Script-->
 <script type="text/javascript">
