--- a/home.html
+++ b/home.html
@@ -36,7 +36,7 @@ s1.setAttribute('crossorigin','*');
 s0.parentNode.insertBefore(s1,s0);
 })();
 
-var page = " home ";
+const page = " home ";
 window.Tawk_API.onLoad = function(){
         console.log(Date.now() + page + "load");
 };
